variables.Variables.scala.error
Erreur de compilation :
Variables:8: error: not found: value prendreBiscuit
prendreBiscuit()
^Variables:9: error: Int does not take parameters
while (retour != nbPas()) {
                      ^