variables.Variables.scala.code
var nbPas:Int = 0
var retour:Int = 0
while (!estSurBiscuit()) {
  nbPas = nbPas + 1
  avance()
  
}
prendreBiscuit()
while (retour != nbPas()) {
  recule()
  retour = retour +1
}

